deployment/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: min-js-webserver
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: min-js-webserver.28bec8362bdb44a78f57.australiasoutheast.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: min-js-webserver-service
                port:
                  number: 80
